test/classes/delete-free/anymanaged/anymanaged-init.good
anymanaged-init.chpl:3: In initializer:
anymanaged-init.chpl:5: warning: please add '(?)' to type 'A' because it is generic
anymanaged-init.chpl:3: error: could not determine the concrete type for the generic return type 'unmanaged A'
